Fixed right and left div alignment error.

--- a/about/about.css
+++ b/about/about.css
@@ -1,7 +1,5 @@
 @CHARSET "UTF-8";
 #experience{
-	width:90%;
-	width-min:200px;
 	margin-left:15px;
 	background-color:#E5E5E5;
 	border-radius:15px;
